[package]
name = "axum-jwt-bridge"
version = "0.1.0"
edition = "2024"
description = "JWT encode/decode for Axum, compatible compatible with any HS256 JWT issuer with an audience claim  as well as Laravel's `tymon/jwt-auth` with a provider claim"
license = "MIT"
keywords = ["axum", "jwt", "authentication", "laravel"]

[dependencies]
jsonwebtoken = { version = "^10.3", features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
axum = "0.8"
http = "1"
sha1 = "0.10"
rand = "0.10"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
dotenvy = "0.15"